added more plumbing

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,5 +12,22 @@
   </head>
   <body>
     <h1>Reminders Webpage</h1>
+
+    <form class="taskForm">
+      <input
+        type="text"
+        placeholder="Task to add"
+        class="taskInput"
+        id="taskInputBox"
+      />
+      <input
+        type="button"
+        value="Task Completed"
+        class="taskInput"
+        id="completeBtn"
+      />
+
+      <!--  -->
+    </form>
   </body>
 </html>
