adding a post route on client and router

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,8 +26,8 @@
         class="taskInput"
         id="completeBtn"
       />
-
-      <!--  -->
     </form>
+    <h2>All of the items in the ToDo-List</h2>
+    <!-- information from GET will appear here -->
   </body>
 </html>
