working on post and pushing things to the DOM

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,9 +20,17 @@
         class="taskInput"
         id="taskInputBox"
       />
+
+      <input
+        type="text"
+        placeholder="mm-dd-year"
+        class="taskInput"
+        id="dateInput"
+      />
+
       <input
         type="button"
-        value="Task Completed"
+        value=" Submit Task "
         class="taskInput"
         id="completeBtn"
       />
