--- a/server/public/index.html
+++ b/server/public/index.html
@@ -35,7 +35,14 @@
         id="completeBtn"
       />
     </form>
-    <h2>All of the items in the ToDo-List</h2>
-    <!-- information from GET will appear here -->
+
+    <table id="tableData">
+      <thead>
+        <tr>
+          <th>All of the items in the ToDo-List</th>
+        </tr>
+      </thead>
+      <tbody id="appendListToDOM"></tbody>
+    </table>
   </body>
 </html>
