made changes to client and router side

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -22,17 +22,10 @@
       />
 
       <input
-        type="text"
-        placeholder="mm-dd-year"
-        class="taskInput"
-        id="dateInput"
-      />
-
-      <input
         type="button"
         value=" Submit Task "
         class="taskInput"
-        id="completeBtn"
+        id="submitTaskBtn"
       />
     </form>
 
